# targets

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  INTEGRATION_GUIDE.md  LICENSE  README.md  SUMMARY.md  vcpkg.json
.github/workflows/: ci.yml  update-vcpkg-registry.yml
cmake/: Targets.cmake  TargetsConfig.cmake.in  TargetsVersion.cmake  dummy.cpp
cmake/codegen/: flatbuffer_cpp_library.cmake  protobuf_cpp_library.cmake
cmake/core/: cpp_binary.cmake  cpp_library.cmake  cpp_target.cmake  cpp_test.cmake  install_export.cmake  platform_parser.cmake  toolchain_hygiene.cmake
cmake/dependencies/: find_targets.cmake  import_dependencies.cmake
cmake/utils/: embed_binary.cmake  set_folder_for_targets.cmake
docs/: API.md  MIGRATION.md
examples/: CMakeLists.txt
examples/basic_library/: CMakeLists.txt
examples/basic_library/include/mathlib/: calculator.h
examples/basic_library/src/: calculator.cpp
examples/codegen_flatbuffers/: CMakeLists.txt
examples/codegen_protobuf/: CMakeLists.txt
examples/codegen_protobuf/proto/: addressbook.proto  greeter.proto
examples/codegen_protobuf/src/: main.cpp
examples/data_files/: CMakeLists.txt
examples/data_files/data/: message.txt
examples/data_files/src/: main.cpp
examples/embed_binary/: CMakeLists.txt
examples/embed_binary/assets/: message.txt
examples/embed_binary/src/: main.cpp
examples/executable_with_deps/: CMakeLists.txt
examples/executable_with_deps/src/: main.cpp
examples/install_export/: CMakeLists.txt
examples/install_export/include/widget/: widget.h
examples/install_export/src/: widget.cpp
examples/shared_library/: CMakeLists.txt
examples/shared_library/app/: main.cpp
examples/shared_library/greeter/: CMakeLists.txt
examples/shared_library/greeter/include/greeter/: greeter.h
examples/shared_library/greeter/src/: greeter.cpp
examples/toolchain_hygiene/: CMakeLists.txt
examples/toolchain_hygiene/include/hygiene/: hygiene.h
examples/toolchain_hygiene/src/: hygiene.cpp  main.cpp
ports/targets/: portfile.cmake  usage  vcpkg.json
tests/: CMakeLists.txt
tests/consume_install/: CMakeLists.txt  main.cpp
tests/consume_port/: CMakeLists.txt  vcpkg.json
tests/consume_port/include/: greeter.h
tests/consume_port/src/: greeter.cpp  main.cpp
tests/integration/cpp_library_export_header/: CMakeLists.txt
tests/integration/cpp_library_install_export/: CMakeLists.txt
tests/integration/cpp_library_install_export/include/thing/: thing.h
tests/integration/cpp_library_install_export/src/: thing.cpp
tests/integration/cpp_library_type/: CMakeLists.txt
tests/integration/cpp_target_arg_validation/: CMakeLists.txt
tests/integration/cpp_target_dummy_source/: CMakeLists.txt
tests/integration/cpp_target_dummy_source/Include/: header_only.h
tests/integration/cpp_target_embedded_subproject/: CMakeLists.txt
tests/integration/cpp_target_embedded_subproject/inner/: CMakeLists.txt
tests/integration/cpp_target_embedded_subproject/inner/Source/Core/: CMakeLists.txt
tests/integration/cpp_target_embedded_subproject/inner/Source/Sub/: CMakeLists.txt
tests/integration/cpp_target_hygiene/: CMakeLists.txt
tests/integration/cpp_target_interface_semantics/: CMakeLists.txt
tests/integration/cpp_target_interface_semantics/Include/: iface.h
tests/integration/cpp_target_msvc_flags/: CMakeLists.txt
tests/integration/cpp_target_options/: CMakeLists.txt
tests/integration/cpp_target_source_group/: CMakeLists.txt  in_tree.cpp
tests/integration/cpp_target_source_group/Include/: in_tree.h
tests/integration/cpp_test_attributes/: CMakeLists.txt
tests/integration/cpp_test_build_testing/: CMakeLists.txt
tests/integration/cpp_test_folder/: CMakeLists.txt
tests/integration/cpp_test_install_gtest/: CMakeLists.txt
tests/integration/cpp_test_lazy_gtest/: CMakeLists.txt
tests/integration/cpp_test_multidir/: CMakeLists.txt
tests/integration/cpp_test_multidir/cmake/: FindGTest.cmake
tests/integration/cpp_test_multidir/dir_a/: CMakeLists.txt  first_test.cpp
tests/integration/cpp_test_multidir/dir_b/: CMakeLists.txt  second_test.cpp
tests/integration/embed_binary/: CMakeLists.txt
tests/integration/flatbuffer_cpp_library/: CMakeLists.txt
tests/integration/protobuf_cpp_library/: CMakeLists.txt
tests/integration/protobuf_cpp_library/proto/: example.proto
tests/unit/: test_parse_platforms.cmake
